force-app/main/default/objects/Property_Inspection__c/validationRules/Overall_Rating_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Overall_Rating_Range</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Overall_Rating__c )),
    OR(
        Overall_Rating__c &lt; 1,
        Overall_Rating__c &gt; 5
    )
)</errorConditionFormula>
    <errorDisplayField>Overall_Rating__c</errorDisplayField>
    <errorMessage>Overall rating will only range 1 - 5</errorMessage>
</ValidationRule>