force-app/main/default/objects/Property_Inspection__c/validationRules/Required_Rating_While_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Rating_While_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Inspection_Status__c, &quot;Completed&quot;),
    ISBLANK(Overall_Rating__c)
)</errorConditionFormula>
    <errorDisplayField>Overall_Rating__c</errorDisplayField>
    <errorMessage>Overall Rating is Required when status is completed</errorMessage>
</ValidationRule>