force-app/main/default/objects/Property_Inspection__c/listViews/Last_30_Days.listView-meta.xml
<ListView>
    <fullName>Last_30_Days</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inspection_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Last 30 Days</label>
</ListView>